--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+lib/di/injection/get_it_container.config.dart
+lib/di/mapping/auto_mapper.mapper.dart
