--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  busenet: ^0.8.2
   cupertino_icons: ^1.0.2
+  envied: ^0.5.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
@@ -43,6 +45,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: null
+  envied_generator: ^0.5.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
